[tool.poetry]
name = "docs"
version = "0.0.0"
description = "Version management for docs"
license = "Apache-2.0"
authors = [
  "Onica Group LLC <opensource@onica.com>",
]

# TODO include this in the main project - https://github.com/readthedocs/readthedocs.org/issues/4912
# these will all need to be added as optional dependencies and installed as "extras"
# comment with solution: https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569

[tool.poetry.dependencies]
python = ">=3.7, <4"

jsx-lexer = "^1.0"
runway = { develop = true, path = "../" }
sphinx = "^3.5"
sphinx-github-changelog = "^1.0"
sphinx-rtd-theme = "^0.5"
sphinx-tabs = "^3.0"
sphinxcontrib-apidoc = "^0.3"
sphinxcontrib-programoutput = "^0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
