[tool.poetry]
name = "runway-quickstart-conduit"
version = "0.0.0"
description = "Runway Quickstart"
authors = [
  "Onica Group LLC <opensource@onica.com>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
runway = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
