[tool.poetry]
name = "runway-quickstart-conduit"
version = "0.0.0"
authors = [
  "Onica Group LLC <opensource@onica.com>",
]
description = "Runway Quickstart"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
runway = "^2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
