[tool.poetry]
name = "runway-sample-cdk-py"
version = "0.0.0"
authors = ["Rackspace Technology, Inc. <opensource@rackspace.com>"]
description = "Runway Sample"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
"aws-cdk.aws_iam" = "^1.13"
"aws-cdk.aws_s3" = "^1.13"
"aws-cdk.aws_sns" = "^1.13"
"aws-cdk.aws_sns_subscriptions" = "^1.13"
"aws-cdk.aws_sqs" = "^1.13"
"aws-cdk.core" = "^1.13"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
