[tool.poetry]
name = "runway-sample-sls-py"
version = "0.0.0"
description = "Runway Sample"
authors = ["Onica Group LLC <opensource@onica.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

pyyaml = "^5.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
