[tool.poetry]
name = "runway-sample-sls-py"
version = "0.0.0"
authors = ["Rackspace Technology, Inc. <opensource@rackspace.com>"]
description = "Runway Sample"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
