[tool.poetry]
name = "test-awslambda-xmlsec"
version = "0.0.0"
description = "Test for awslambda hook."
license = "Apache-2.0"
authors = [
  "Onica Group LLC <opensource@onica.com>",
]

[tool.poetry.dependencies]
python = ">=3.7, <4"

xmlsec = "*"

[build-system]
requires = ["poetry_core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
