[tool.poetry]
name = "test-awslambda-xmlsec"
version = "0.0.0"
authors = [
  "Rackspace Technology, Inc. <opensource@rackspace.com>",
]
description = "Test for awslambda hook."
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7, <4"
xmlsec = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.3"]
